--- a/src/app/shared/components/notification/notification.component.html
+++ b/src/app/shared/components/notification/notification.component.html
@@ -1,19 +1,17 @@
 <div class="success-bar-container">
   <div>
-    <span
-      class="material-icons success-icon"
-      [ngClass]="{
+    <span class="material-icons success-icon" [ngClass]="{
         'success-icon': data.type === 'success',
         'error-icon': data.type === 'error'
-      }"
-    >
+      }">
       {{ data.type === "success" ? "done_all" : "error_outline" }}
     </span>
   </div>
   <div>
-    <span class="text-msg"
-      ><strong>{{ data.type === "success" ? "Success: " : "Error: " }}</strong>
-      {{ data.customMsg }}</span
+    <span class="text-msg">
+      <strong>{{ data.type === "success" ? "Success: " : "Error: " }}</strong>
+      {{ data.customMsg }}
+      </span
     >
   </div>
   <div>
