--- a/src/app/routes/employee-entry/employee-entry.component.html
+++ b/src/app/routes/employee-entry/employee-entry.component.html
@@ -1,17 +1,17 @@
 <form [formGroup]="employeeform" (ngSubmit)="onSubmit()">
-    <mat-card class="mat-elevation-z5">
+    <mat-card class="mat-elevation-z5" [ngClass]="{'loader': isLoading}">
         <div class="parent-div">
             <div>
               <mat-form-field appearance="legacy">
                 <mat-label>Employee ID</mat-label>
-                <input matInput placeholder="Placeholder" formControlName="Emp_Id">
+                <input matInput placeholder="Placeholder" formControlName="Employee_Id">
                 <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
               </mat-form-field>
             </div>
             <div>
               <mat-form-field appearance="legacy">
                 <mat-label>Employee Name</mat-label>
-                <input matInput placeholder="Placeholder" formControlName="Emp_name">
+                <input matInput placeholder="Placeholder" formControlName="Employee_name">
                 <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
               </mat-form-field>
             </div>
@@ -20,13 +20,13 @@
               <div>
               <mat-form-field appearance="legacy">
                 <mat-label>Emp.role</mat-label>
-                <input matInput placeholder="Emp. role" formControlName="Emp_role">
+                <input matInput placeholder="Emp. role" formControlName="Employee_role">
               </mat-form-field>
             </div>
                 <div>
                   <mat-form-field appearance="legacy">
                     <mat-label>Address</mat-label>
-                    <input matInput placeholder="Placeholder" formControlName="address" maxlength="50">
+                    <input matInput placeholder="Placeholder" formControlName="Address" maxlength="50">
                     <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
                   </mat-form-field>
                 </div>
@@ -35,14 +35,14 @@
                 <div>
                   <mat-form-field appearance="legacy">
                     <mat-label>Email</mat-label>
-                    <input matInput  placeholder="Placeholder" type="email" formControlName="email">
+                    <input matInput  placeholder="Placeholder" type="email" formControlName="Email">
                     <mat-icon matSuffix>code</mat-icon>
                   </mat-form-field>
                 </div>
                 <div>
                   <mat-form-field appearance="legacy">
                     <mat-label>Mobile Number</mat-label>
-                    <input matInput placeholder="Placeholder" formControlName="mobile_number" maxlength="10">
+                    <input matInput placeholder="Placeholder" formControlName="Mobile_number" maxlength="10">
                     <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
                   </mat-form-field>
                 </div>
@@ -51,14 +51,14 @@
                 <div>
                   <mat-form-field appearance="legacy">
                     <mat-label>Salary</mat-label>
-                    <input matInput placeholder="Placeholder" formControlName="salary">
+                    <input matInput placeholder="Placeholder" formControlName="Salary">
                     <mat-icon matSuffix>code</mat-icon>
                   </mat-form-field>
                 </div>
                 <div>
                   <mat-form-field appearance="legacy">
                     <mat-label>Joining date</mat-label>
-                    <input matInput placeholder="Select Date" type="date" formControlName="joining_date" mat-datepicker>
+                    <input matInput placeholder="Select Date" type="date" formControlName="Joining_date">
                   </mat-form-field>
                 </div>
               </div>
@@ -66,14 +66,14 @@
                 <div>
                   <mat-form-field appearance="legacy">
                     <mat-label>Aadhar Card Number</mat-label>
-                    <input matInput placeholder="Placeholder" formControlName="aadhar_card" min="12" maxlength="12">
+                    <input matInput placeholder="Placeholder" formControlName="Aadhar_card" min="12" maxlength="12">
                     <mat-icon matSuffix>code</mat-icon>
                   </mat-form-field>
                 </div>
                 <div>
                   <mat-form-field appearance="legacy">
                     <mat-label>Pan Card</mat-label>
-                    <input matInput placeholder="Placeholder" formControlName="pan_card">
+                    <input matInput placeholder="Placeholder" formControlName="Pan_card">
                     <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
                   </mat-form-field>
                 </div>
