--- a/src/app/layout/bolt-sidenav/bolt-sidenav/header/header.component.scss
+++ b/src/app/layout/bolt-sidenav/bolt-sidenav/header/header.component.scss
@@ -8,8 +8,8 @@
 .header-left {
     padding: 0 0 0 40px;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: start;
+    align-items: start;
 
     span {
         color: #ff7177;
@@ -17,9 +17,15 @@
         padding-top: 2px;
         font-size: 30px;
         font-weight: 400;
+        font-weight: 600;
+        font-style: italic;
     }
     mat-icon {
         // padding-top: 4px;
+        color: #ff7177;
+        font-size: 25px;
+        font-weight: 600;
+        font-style: italic;
         color: #ff7177;
     }
 }
