--- a/src/app/routes/distributor-entry/distributor-entry.component.html
+++ b/src/app/routes/distributor-entry/distributor-entry.component.html
@@ -114,7 +114,7 @@
               </div>
               <div class="btn-row">
                 <button mat-raised-button color="basic" (click)="clearInputMethod1()">Clear</button>
-                <button mat-raised-button class="primary" [disabled]="!distributorform.valid">Save</button>
+                <button mat-raised-button class="primary" >Save</button>
               </div>
     </mat-card>
 </form>
