--- a/src/app/routes/employee-entry/employee-entry.component.html
+++ b/src/app/routes/employee-entry/employee-entry.component.html
@@ -5,7 +5,7 @@
               <mat-form-field appearance="legacy">
                 <mat-label>Employee ID</mat-label>
                 <input matInput placeholder="Placeholder" formControlName="Employee_Id">
-                <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+                <mat-icon matSuffix>code</mat-icon>
               </mat-form-field>
             </div>
             <div>
@@ -21,13 +21,14 @@
               <mat-form-field appearance="legacy">
                 <mat-label>Emp.role</mat-label>
                 <input matInput placeholder="Emp. role" formControlName="Employee_role">
+                <mat-icon matSuffix>work</mat-icon>
               </mat-form-field>
             </div>
                 <div>
                   <mat-form-field appearance="legacy">
                     <mat-label>Address</mat-label>
                     <input matInput placeholder="Placeholder" formControlName="Address" maxlength="50">
-                    <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+                    <mat-icon matSuffix>home</mat-icon>
                   </mat-form-field>
                 </div>
               </div>
@@ -36,14 +37,14 @@
                   <mat-form-field appearance="legacy">
                     <mat-label>Email</mat-label>
                     <input matInput  placeholder="Placeholder" type="email" formControlName="Email">
-                    <mat-icon matSuffix>code</mat-icon>
+                    <mat-icon matSuffix>email</mat-icon>
                   </mat-form-field>
                 </div>
                 <div>
                   <mat-form-field appearance="legacy">
                     <mat-label>Mobile Number</mat-label>
                     <input matInput placeholder="Placeholder" formControlName="Mobile_number" maxlength="10">
-                    <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+                    <mat-icon matSuffix>phone</mat-icon>
                   </mat-form-field>
                 </div>
               </div>
@@ -52,7 +53,7 @@
                   <mat-form-field appearance="legacy">
                     <mat-label>Salary</mat-label>
                     <input matInput placeholder="Placeholder" formControlName="Salary">
-                    <mat-icon matSuffix>code</mat-icon>
+                    <mat-icon matSuffix>savings</mat-icon>
                   </mat-form-field>
                 </div>
                 <div>
@@ -67,14 +68,14 @@
                   <mat-form-field appearance="legacy">
                     <mat-label>Aadhar Card Number</mat-label>
                     <input matInput placeholder="Placeholder" formControlName="Aadhar_card" min="12" maxlength="12">
-                    <mat-icon matSuffix>code</mat-icon>
+                    <mat-icon matSuffix>remember_me</mat-icon>
                   </mat-form-field>
                 </div>
                 <div>
                   <mat-form-field appearance="legacy">
                     <mat-label>Pan Card</mat-label>
                     <input matInput placeholder="Placeholder" formControlName="Pan_card">
-                    <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+                    <mat-icon matSuffix>remember_me</mat-icon>
                   </mat-form-field>
                 </div>
               </div>
