--- a/src/app/routes/distributor-details/distributor-details.component.html
+++ b/src/app/routes/distributor-details/distributor-details.component.html
@@ -3,16 +3,22 @@
     <table spi-table id="distributor-details" [spiTableSettings]="spiTableSettings">
       <thead spi-header [spiTableSettings]="spiTableSettings" (updatedSpiTableSettings)="detectChanges($event)">
         <tr>
-          <th *ngFor="let column of displayedColumns" spi-cell>{{column.display}}</th>
+          <ng-container *ngFor="let column of displayedColumns">
+            <th *ngIf="column.bind !== 'delete'"  spi-cell>{{column.display}}</th>
+            <th *ngIf="column.bind === 'delete'" class="delete-header" spi-cell>{{column.display}}</th>
+        </ng-container>
         </tr>
       </thead>
       <tbody spi-body>
         <ng-container *ngFor="let data of tableData; let i = index;">
           <tr spi-row [spiTableSettings]="spiTableSettings" *ngIf="i < spiTableSettings.pagination.numberPerPage">
             <ng-container *ngFor="let column of displayedColumns">
-              <td spi-cell class="w-40">
+              <td spi-cell class="w-40" *ngIf="column.bind !== 'delete'">
                 {{data[column.bind]}}
               </td>
+              <td spi-cell class="w-10" *ngIf="column.bind === 'delete'">
+                <mat-icon class="delete-icon" (click)="deleteExpense(data.docId)"> {{data[column.bind]}}</mat-icon>
+              </td> 
             </ng-container>
           </tr>
         </ng-container>
