--- a/src/app/routes/employee-entry/employee-entry.component.html
+++ b/src/app/routes/employee-entry/employee-entry.component.html
@@ -4,14 +4,14 @@
             <div>
               <mat-form-field appearance="legacy">
                 <mat-label>Employee ID</mat-label>
-                <input matInput placeholder="Placeholder" formControlName="Employee_Id">
+                <input matInput placeholder="Employee Id" formControlName="Employee_Id">
                 <mat-icon matSuffix>code</mat-icon>
               </mat-form-field>
             </div>
             <div>
               <mat-form-field appearance="legacy">
                 <mat-label>Employee Name</mat-label>
-                <input matInput placeholder="Placeholder" formControlName="Employee_name">
+                <input matInput placeholder="Employee Name" formControlName="Employee_name">
                 <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
               </mat-form-field>
             </div>
@@ -27,7 +27,7 @@
                 <div>
                   <mat-form-field appearance="legacy">
                     <mat-label>Address</mat-label>
-                    <input matInput placeholder="Placeholder" formControlName="Address" maxlength="50">
+                    <input matInput placeholder="Address" formControlName="Address" maxlength="50">
                     <mat-icon matSuffix>home</mat-icon>
                   </mat-form-field>
                 </div>
@@ -36,14 +36,14 @@
                 <div>
                   <mat-form-field appearance="legacy">
                     <mat-label>Email</mat-label>
-                    <input matInput  placeholder="Placeholder" type="email" formControlName="Email">
+                    <input matInput  placeholder="Email" type="email" formControlName="Email">
                     <mat-icon matSuffix>email</mat-icon>
                   </mat-form-field>
                 </div>
                 <div>
                   <mat-form-field appearance="legacy">
                     <mat-label>Mobile Number</mat-label>
-                    <input matInput placeholder="Placeholder" formControlName="Mobile_number" maxlength="10">
+                    <input matInput placeholder="Mpbile number" formControlName="Mobile_number" maxlength="10">
                     <mat-icon matSuffix>phone</mat-icon>
                   </mat-form-field>
                 </div>
@@ -52,7 +52,7 @@
                 <div>
                   <mat-form-field appearance="legacy">
                     <mat-label>Salary</mat-label>
-                    <input matInput placeholder="Placeholder" formControlName="Salary">
+                    <input matInput placeholder="Salary (number format)" formControlName="Salary">
                     <mat-icon matSuffix>savings</mat-icon>
                   </mat-form-field>
                 </div>
@@ -67,14 +67,14 @@
                 <div>
                   <mat-form-field appearance="legacy">
                     <mat-label>Aadhar Card Number</mat-label>
-                    <input matInput placeholder="Placeholder" formControlName="Aadhar_card" min="12" maxlength="12">
+                    <input matInput placeholder="Enter Aadhar card" formControlName="Aadhar_card" min="12" maxlength="12">
                     <mat-icon matSuffix>remember_me</mat-icon>
                   </mat-form-field>
                 </div>
                 <div>
                   <mat-form-field appearance="legacy">
                     <mat-label>Pan Card</mat-label>
-                    <input matInput placeholder="Placeholder" formControlName="Pan_card">
+                    <input matInput placeholder="Use Capital Words" formControlName="Pan_card">
                     <mat-icon matSuffix>remember_me</mat-icon>
                   </mat-form-field>
                 </div>
