--- a/src/app/routes/distributor-entry/distributor-entry.component.html
+++ b/src/app/routes/distributor-entry/distributor-entry.component.html
@@ -4,14 +4,14 @@
                 <div>
                   <mat-form-field appearance="legacy">
                     <mat-label>Distributor ID</mat-label>
-                    <input matInput placeholder="Placeholder" formControlName="Distributor_Id">
+                    <input matInput placeholder="Distributor ID" formControlName="Distributor_Id">
                     <mat-icon matSuffix>perm_identity</mat-icon>
                   </mat-form-field>
                 </div>
                 <div>
                   <mat-form-field appearance="legacy">
                     <mat-label>Distributor Name</mat-label>
-                    <input matInput placeholder="Placeholder" formControlName="Distributor_name">
+                    <input matInput placeholder="Distributor Name" formControlName="Distributor_name">
                     <mat-icon matSuffix>badge</mat-icon>
                   </mat-form-field>
                 </div>
@@ -20,14 +20,14 @@
                 <div>
                   <mat-form-field appearance="legacy">
                     <mat-label>Address</mat-label>
-                    <input matInput placeholder="Placeholder" formControlName="address">
+                    <input matInput placeholder="Address" formControlName="address">
                     <mat-icon matSuffix>location_city</mat-icon>
                   </mat-form-field>
                 </div>
                 <div>
                   <mat-form-field appearance="legacy">
                     <mat-label>Mobile No.</mat-label>
-                    <input matInput placeholder="Placeholder" formControlName="Mobile">
+                    <input matInput placeholder="Mobile number" formControlName="Mobile">
                     <mat-icon matSuffix>phone_android</mat-icon>
                   </mat-form-field>
                 </div>
@@ -36,14 +36,14 @@
                 <div>
                   <mat-form-field appearance="legacy">
                     <mat-label>Email Address</mat-label>
-                    <input matInput placeholder="Placeholder" formControlName="email">
+                    <input matInput placeholder="Email Address" formControlName="email">
                     <mat-icon matSuffix>email</mat-icon>
                   </mat-form-field>
                 </div>
                 <div>
                   <mat-form-field appearance="legacy">
                     <mat-label>Dealer Name</mat-label>
-                    <input matInput placeholder="Placeholder" formControlName="dealer_person_name">
+                    <input matInput placeholder="Dealer Name" formControlName="dealer_person_name">
                     <mat-icon matSuffix>badge</mat-icon>
                   </mat-form-field>
                 </div>
@@ -52,14 +52,14 @@
                 <div>
                   <mat-form-field appearance="legacy">
                     <mat-label>MRP</mat-label>
-                    <input matInput placeholder="Placeholder" formControlName="Product_MRP">
+                    <input matInput placeholder="MRP" formControlName="Product_MRP">
                     <mat-icon matSuffix>paid</mat-icon>
                   </mat-form-field>
                 </div>
                 <div>
                   <mat-form-field appearance="legacy">
                     <mat-label>Product Amount.</mat-label>
-                    <input matInput placeholder="Placeholder" formControlName="Product_amount">
+                    <input matInput placeholder="Not use decimal" formControlName="Product_amount">
                     <mat-icon matSuffix>paid</mat-icon>
                   </mat-form-field>
                 </div>
@@ -68,14 +68,14 @@
                 <div>
                   <mat-form-field appearance="legacy">
                     <mat-label>Quantity</mat-label>
-                    <input matInput placeholder="Placeholder" formControlName="Quantity">
+                    <input matInput placeholder="Quantity" formControlName="Quantity">
                     <mat-icon matSuffix>production_quantity_limits</mat-icon>
                   </mat-form-field>
                 </div>
                 <div>
                   <mat-form-field appearance="legacy">
                     <mat-label>Total_Amount</mat-label>
-                    <input matInput placeholder="Placeholder" formControlName="Total_Amount">
+                    <input matInput placeholder="Total_Amount" formControlName="Total_Amount">
                     <mat-icon matSuffix>money</mat-icon>
                   </mat-form-field>
                 </div>
@@ -84,14 +84,14 @@
                 <div>
                   <mat-form-field appearance="legacy">
                     <mat-label>Selling Price</mat-label>
-                    <input matInput placeholder="Placeholder" formControlName="Selling_price">
+                    <input matInput placeholder="Selling Price" formControlName="Selling_price">
                     <mat-icon matSuffix>badge</mat-icon>
                   </mat-form-field>
                 </div>
                 <div>
                   <mat-form-field appearance="legacy">
                     <mat-label>Profit</mat-label>
-                    <input matInput placeholder="Placeholder" formControlName="Profit">
+                    <input matInput placeholder="Profit" formControlName="Profit">
                     <mat-icon matSuffix >emoji_symbols</mat-icon>
                   </mat-form-field>
                 </div>
@@ -100,21 +100,21 @@
                 <div>
                   <mat-form-field appearance="legacy">
                     <mat-label>Purchase Date</mat-label>
-                    <input matInput placeholder="Placeholder" formControlName="Purchase_Date">
+                    <input matInput placeholder="Purchase Date" formControlName="Purchase_Date">
                     <mat-icon matSuffix>date_range</mat-icon>
                   </mat-form-field>
                 </div>
                 <div>
                   <mat-form-field appearance="legacy">
                     <mat-label>City</mat-label>
-                    <input matInput placeholder="Placeholder" formControlName="City">
+                    <input matInput placeholder="City" formControlName="City">
                     <mat-icon matSuffix>location_city</mat-icon>
                   </mat-form-field>
                 </div>
               </div>
               <div class="btn-row">
                 <button mat-raised-button color="basic" (click)="clearInputMethod1()">Clear</button>
-                <button mat-raised-button class="primary" >Save</button>
+                <button mat-raised-button class="primary" [disabled]="!distributorform.valid">Save</button>
               </div>
     </mat-card>
 </form>
