--- a/src/app/routes/employee-details/employee-details.component.html
+++ b/src/app/routes/employee-details/employee-details.component.html
@@ -1,6 +1,5 @@
-<mat-card class="mat-elevation-z5"> 
-  <label>Employee Details</label>
-  <div id="employee-details-container" *ngIf="spiTableSettings !== undefined">
+<mat-card class="mat-elevation-z5">
+  <div id="employee_details-container" *ngIf="spiTableSettings !== undefined">
       <table spi-table id="employee_details" [spiTableSettings]="spiTableSettings">
         <thead spi-header [spiTableSettings]="spiTableSettings" (updatedSpiTableSettings)="detectChanges($event)">
           <tr>
@@ -18,7 +17,7 @@
                   {{data[column.bind]}}
                 </td>
                 <td spi-cell class="w-10" *ngIf="column.bind === 'delete'">
-                  <mat-icon class="delete-icon" (click)="deleteExpense(data.docId)"> {{data[column.bind]}}</mat-icon>
+                  <mat-icon class="delete-icon material-icons" (click)="deleteExpense(data.docId)">{{data[column.bind]}}</mat-icon>
                 </td> 
               </ng-container>
             </tr>
