--- a/src/app/routes/employee-details/employee-details.component.scss
+++ b/src/app/routes/employee-details/employee-details.component.scss
@@ -9,5 +9,9 @@
   }
   .delete-header {
       min-width: 10px;
-      width: 10px;
+      max-width: 10px;
   }
+  mat-card{
+    padding: 0 !important;
+    margin: 20px;
+}
