--- a/src/app/routes/product-details/product-details.component.scss
+++ b/src/app/routes/product-details/product-details.component.scss
@@ -2,3 +2,11 @@
     cursor: pointer;
     color: #ff7177;
 }
+mat-card{
+    padding: 0 !important;
+    margin: 20px;
+}
+.delete-header {
+    min-width: 10px;
+    max-width: 10px;
+}
