--- a/src/app/routes/add-product/add-product.component.scss
+++ b/src/app/routes/add-product/add-product.component.scss
@@ -80,3 +80,14 @@ form {
   opacity: 0.3;
   pointer-events: none;
 }
+
+.profit {
+  color: rgb(11, 194, 11) !important;
+  font-size: 35px;
+  font-weight: 600;
+}
+.loss {
+  color: red;
+  font-size: 35px;
+  font-weight: 600;
+}
