--- a/src/app/routes/employee-details/employee-details.component.scss
+++ b/src/app/routes/employee-details/employee-details.component.scss
@@ -9,7 +9,7 @@
   }
   .delete-header {
       min-width: 10px;
-      max-width: 10px;
+      // max-width: 10px;
   }
   mat-card{
     padding: 0 !important;
