--- a/src/app/shared/components/spi-tables/spi-table/spi-table.component.scss
+++ b/src/app/shared/components/spi-tables/spi-table/spi-table.component.scss
@@ -21,6 +21,10 @@
   background-color: #f2f2f2;
 }
 
+.spi-tables-style tr:nth-child(odd) {
+  background-color: #fff;
+}
+
 .spi-tables-style tr:hover {
   background-color: #ddd;
 }
@@ -32,7 +36,8 @@
   text-align: left !important;
   background-image: linear-gradient(#f13737, #ff7177);
   color: white;
-  padding-right: 24px;
+  padding-right: 12px;
+  padding-left: 12px;
   position: relative;
   font-weight: 500;
 }
