--- a/src/app/routes/employee-details/employee-details.component.html
+++ b/src/app/routes/employee-details/employee-details.component.html
@@ -13,12 +13,15 @@
           <ng-container *ngFor="let data of tableData; let i = index;">
             <tr spi-row [spiTableSettings]="spiTableSettings" *ngIf="i < spiTableSettings.pagination.numberPerPage">
               <ng-container *ngFor="let column of displayedColumns">
-                <td spi-cell class="w-40" *ngIf="column.bind !== 'delete'">
+                <td spi-cell class="w-40" *ngIf="column.bind !== 'delete' && column.bind !== 'picture'">
                   {{data[column.bind]}}
                 </td>
                 <td spi-cell class="w-10" *ngIf="column.bind === 'delete'">
                   <mat-icon class="delete-icon material-icons" (click)="deleteExpense(data.docId)">{{data[column.bind]}}</mat-icon>
                 </td> 
+                <td spi-cell class="w-10" *ngIf="column.bind === 'picture'">
+                  <img [src]="data[column.bind]" alt="" style="width:40px; height:25px">
+                </td>
               </ng-container>
             </tr>
           </ng-container>
